@@ -1,3 +1,7 @@
+Changes in @NEW@:
+  o Build Changes:
+    * All files in "binary directories" now provide their path. (CNY-930)
+
 Changes in 1.0.39:
   o Client Changes:
     * A signature callback has been added, which allows one to catch
